Tue Jan 16 17:17:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: started filling it :-(
	* libxslt/pattern.c: should now at least compile the full
	  set of patterns authorized. Default priorities added.
	* libxslt/transform.c: a bit more work and cleanup.

Mon Jan 15 15:34:17 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: started adding in there :-(

Mon Jan 15 15:31:41 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c, xslt.c, xsltproc.c: lots of fixes, added
	  support of xslt:if and xslt:attribute, need libxml2 interfaces
	  present only in CVS.

Sat Jan 13 23:26:21 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* test/Makefile.am test/REC*/Makefile.am: added first test
	* libxslt/pattern.c libxslt/transform.c libxslt/xslt.c:
	  cleanup of nodes at reading of stylesheet, added support
	  for xsl:for-each and fixed a few recursion bugs

Fri Jan 12 22:33:07 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* pattern.c, xslt.c: removed debug
	* transform.c: added value-of, seems to handle the first
	  REC example correctly

Fri Jan 12 18:34:01 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c, xsltproc.c: small fight with spaces and formatting
	  may need a revisit later but looks pretty good right now.

Fri Jan 12 13:43:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c: basic processing in place
	* xsltInternals.h: exported one xslt.c function

Thu Jan 11 21:10:59 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.[ch] Makefile.am: started adding the
	  transformation module
	* pattern.[ch] xslt.c: more work...

Thu Jan 11 14:02:03 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: started adding xsltTestCompMatch()

Wed Jan 10 20:44:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: more work on parsing selectors

Wed Jan 10 16:29:41 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
